--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lit-protocol/lit-node-client": "^7.0.8",
     "@lit-protocol/vincent-sdk": "^0.1.1-1",
     "assert": "^2.1.0",
     "buffer": "^6.0.3",
